Update font color and fix events on mobile

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply text-base text-[#171717] dark:text-[#ededed] bg-background dark:bg-dk_background;
+  @apply text-base dark:text-white bg-black;
   font-family: Arial, Helvetica, sans-serif;
 }
 /* Customize the scrollbar track */
